# CoverageTest

./: .gitattributes  .gitignore  README.md
code/: CoverageB.h  CoverageCount.h  CoverageExJusify.h  CoverageExJustify.h  CoverageExSkip.h  CoverageFD_SET.h  CoverageHead.h  CoverageMacro.cpp  CoverageMacro.h  CoverageMcpp.h  CoverageNotInc.h  CoverageOneFunc.h  CoverageSrc.cpp  CoverageSrc.h  CoverageTpl.h  SomeEnum.h  SomeStruct.h  Use.h  coding.h
make/: CTC_gnumake.cmd  CTC_msbuild.cmd  CTC_nmake.cmd  CoverageTest.make  CoverageTest.sln  CoverageTest.vcxproj  CoverageTest.vcxproj.filters  CovrageTest.sln  CovrageTest.vcxproj  CovrageTest.vcxproj.filters  Makefile  README.md  _bc_run.cmd  _bc_setup.cmd  _be_report.cmd  _be_restore.cmd  _be_setup.cmd  _ctc_report.cmd  _ctc_setup.cmd  be_off.cmd  be_restore.cmd  bullseye_gnumake.cmd  bullseye_msbuild.cmd  bullseye_msbuild_html.cmd  bullseye_msbuild_inncr.cmd  ctc copy.cmd  ctc.cmd  ctc__run.cmd  ctc__setup.cmd  ctc_gnumake.cmd  ctc_launch.cmd  ctc_msbuild.cmd  ctc_nmake.cmd  ctc_setup.cmd  premake5.lua
make/_cmd/: _be_exclude.txt  _be_off.cmd  _be_report.cmd  _be_restore.cmd  _be_setup.cmd  _ctc_report.cmd  _ctc_report.htm  _ctc_report.txt  _ctc_report_2.htm  _ctc_setup.cmd  _options.txt  _run.cmd  _setup.cmd
make/cmakelists/: CMakeLists.txt
test/: Tests.cpp  Tests_1998.cpp  Tests_2017.cpp  Tests_B.cpp  Tests_Macro.cpp
testlib/: coverage.h  test.cpp  test.h  use.h
tests/: Tests_1998.cpp  Tests_1998_cov.cpp  Tests_2017.cpp  Tests_B.cpp  Tests_B_Macro.cpp  Tests_Count.cpp  Tests_Exclude.cpp  Tests_FD_SET.cpp  Tests_Macro.cpp  Tests_Mod_Cpp.cpp  Tests_Standard.cpp  Tests_Standard_Part.cpp
